--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,7 +1,8 @@
 KDE_ICON = AUTO
 
-sharedir = $(pkgdatadir)
+#sharedir = $(pkgdatadir)
+sharedir = /usr/share
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(sharedir)
-	$(mkinstalldirs) $(DESTDIR)$(sharedir)/common
-	cp -aR $(srcdir)/icons $(DESTDIR)$(sharedir)/common/
+	cp -aR $(srcdir)/icons $(DESTDIR)$(sharedir)/kappinstaller/
+	cp -aR $(srcdir)/icons $(DESTDIR)$(sharedir)/sidux-edu/
