--- a/Makefile.in
+++ b/Makefile.in
@@ -839,7 +839,7 @@ bcheck-am:
 
 
 #>+ 2
-KDE_DIST=stamp-h.in subdirs Makefile.in sidux_edu.kdevelop.pcs configure.files sidux_edu.kdevelop config.h.in Makefile.in2 configure.in Makefile.cvs sidux_edu.kdevses aclocal.m4 Doxyfile Makefile.am configure acinclude.m4 
+KDE_DIST=stamp-h.in subdirs Makefile.in sidux_edu.kdevelop.pcs configure.files sidux_edu.kdevelop config.h.in configure.in Makefile.cvs sidux_edu.kdevses aclocal.m4 Doxyfile Makefile.am configure acinclude.m4 
 
 #>+ 2
 docs-am:
