--- a/appdata/Makefile.in
+++ b/appdata/Makefile.in
@@ -491,14 +491,16 @@ install-data-local:
 	done; \
 	for apps2 in $(srcdir)/kappinstaller/pmap/*.pmap; do \
 		subname2=$$(basename $$apps2 .pmap); \
-		cp -aR  $(srcdir)/common/descriptions/de/$$subname2.txt $(DESTDIR)$(sharedir)/kappinstaller/descriptions/de/; \
+		if [ -f $(srcdir)/common/descriptions/de/$$subname2.txt ]; then \
+			cp -aR  $(srcdir)/common/descriptions/de/$$subname2.txt $(DESTDIR)$(sharedir)/kappinstaller/descriptions/de/; \
+		fi; \
 	done;
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=Makefile.in Makefile.am 
+KDE_DIST=Makefile.am Makefile.in 
 
 #>+ 2
 docs-am:
