--- a/kappinstaller/Makefile.in
+++ b/kappinstaller/Makefile.in
@@ -693,6 +693,7 @@ messages: rc.cpp
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
+
 #>+ 3
 kappinstaller.moc: $(srcdir)/kappinstaller.h
 	$(MOC) $(srcdir)/kappinstaller.h -o kappinstaller.moc
@@ -705,7 +706,7 @@ clean-metasources:
 	-rm -f  kappinstaller.moc
 
 #>+ 2
-KDE_DIST=Makefile.in kappinstallerdialog.ui kappinstallerdialog.h kappinstaller.desktop kappinstaller Makefile.am 
+KDE_DIST=kappinstallerdialog.ui Makefile.am Makefile.in kappinstaller.desktop 
 
 #>+ 4
 clean-ui:
@@ -754,7 +755,7 @@ bcheck-am:
 
 
 #>+ 11
-kappinstaller.all_cpp.cpp: $(srcdir)/Makefile.in $(srcdir)/main.cpp $(srcdir)/kappinstaller.cpp $(srcdir)/kappinstallerdialog.cpp  kappinstaller.moc kappinstallerdialog.moc
+kappinstaller.all_cpp.cpp: $(srcdir)/Makefile.in $(srcdir)/main.cpp $(srcdir)/kappinstaller.cpp kappinstallerdialog.cpp  kappinstaller.moc kappinstallerdialog.moc
 	@echo 'creating kappinstaller.all_cpp.cpp ...'; \
 	rm -f kappinstaller.all_cpp.files kappinstaller.all_cpp.final; \
 	echo "#define KDE_USE_FINAL 1" >> kappinstaller.all_cpp.final; \
